<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/demo_options_clear_data"
        android:layout_width="@dimen/demo_options_button_width"
        android:layout_height="wrap_content"
        android:text="@string/demo_options_clear_data" />

    <Button
        android:id="@+id/demo_options_load_data"
        android:layout_width="@dimen/demo_options_button_width"
        android:layout_height="wrap_content"
        android:text="@string/demo_options_load_data" />

    <Button
        android:id="@+id/demo_options_show_crypto_currencies"
        android:layout_width="@dimen/demo_options_button_width"
        android:layout_height="wrap_content"
        android:text="@string/demo_options_show_crypto_currencies" />

    <Button
        android:id="@+id/demo_options_show_fiat_currencies"
        android:layout_width="@dimen/demo_options_button_width"
        android:layout_height="wrap_content"
        android:text="@string/demo_options_show_fiat_currencies" />

    <Button
        android:id="@+id/demo_options_show_all_currencies"
        android:layout_width="@dimen/demo_options_button_width"
        android:layout_height="wrap_content"
        android:text="@string/demo_options_show_all_currencies" />


</LinearLayout>
